frontend/src/components/Common/Common.css
.intro {
    display: table;
    width: 100%;
    padding: 0;
    background: url(https://images.ctfassets.net/cj8g3qewem31/6gCFHHMx6FOowAQzBZnTBb/1027042c219756b1ff5357f3e3bc5646/jptmhqql2cycugs2qgzl.jpg) center center no-repeat;
    background-color: #e5e5e5;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}
.intro .overlay {
  background: rgba(0, 0, 0, 0.2);
}
.intro h1 {
    font-family: "Raleway", sans-serif;
    /* text-align: center; */
    color: #fff;
    font-size: 70px;
    font-weight: 700;
    text-transform: uppercase;
    margin-top: 0;
    margin-bottom: 10px;
}
.intro h1 span {
    font-weight: 400;
    color: #5ca9fb;
}
.intro p {
    color: #fff;
    font-size: 22px;
    font-weight: 300;
    line-height: 30px;
    margin: 0 auto;
    margin-bottom: 60px;
}
header .intro-text {
    padding-top: 350px;
    padding-bottom: 200px;
    text-align: center;
}

